# docs/swagger.json
@@ -1449,7 +1449,7 @@
         },
         "/api/v1/gmail/draft/adddraft": {
             "post": {
-                "description": "AddDraft a new draft email message to the system",
+                "description": "AddDraft a new draft message to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -1459,7 +1459,7 @@
                 "tags": [
                     "drafts-gmail"
                 ],
-                "summary": "AddDraft a new draft email message",
+                "summary": "AddDraft a new draft message",
                 "parameters": [
                     {
                         "type": "string",
@@ -1469,8 +1469,8 @@
                         "required": true
                     },
                     {
-                        "description": "Email message in JSON format",
-                        "name": "email",
+                        "description": "Draft message in JSON format",
+                        "name": "draft",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1480,7 +1480,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ID of the send email message",
+                        "description": "ID of the draft message",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1498,7 +1498,7 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to add email message",
+                        "description": "Failed to add draft message",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1508,14 +1508,14 @@
         },
         "/api/v1/gmail/draft/delete/{id}": {
             "delete": {
-                "description": "Delete an draft message based on its identifier",
+                "description": "DeleteDraft an draft message based on its identifier",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "drafts-gmail"
                 ],
-                "summary": "Delete an draft message",
+                "summary": "DeleteDraft an draft message",
                 "parameters": [
                     {
                         "type": "string",
@@ -1552,7 +1552,7 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to delete email message",
+                        "description": "Failed to delete draft message",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1562,7 +1562,7 @@
         },
         "/api/v1/gmail/draft/sendDraft": {
             "post": {
-                "description": "AddDraft a new sent email message to the system",
+                "description": "SendDraft a new sent draft message to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -1572,7 +1572,7 @@
                 "tags": [
                     "drafts-gmail"
                 ],
-                "summary": "SendDraft a new sent email message",
+                "summary": "SendDraft a new sent draft message",
                 "parameters": [
                     {
                         "type": "string",
@@ -1582,8 +1582,8 @@
                         "required": true
                     },
                     {
-                        "description": "Email message in JSON format",
-                        "name": "email",
+                        "description": "Draft message in JSON format",
+                        "name": "draft",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1593,7 +1593,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "ID of the send email message",
+                        "description": "ID of the send draft message",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1611,7 +1611,7 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to add email message",
+                        "description": "Failed to send draft message",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1621,7 +1621,7 @@
         },
         "/api/v1/gmail/draft/update/{id}": {
             "put": {
-                "description": "AddDraft a update draft message to the system",
+                "description": "UpdateDraft a update draft message to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -1631,7 +1631,7 @@
                 "tags": [
                     "drafts-gmail"
                 ],
-                "summary": "SendDraft a update draft message",
+                "summary": "UpdateDraft a update draft message",
                 "parameters": [
                     {
                         "type": "string",
@@ -1649,7 +1649,7 @@
                     },
                     {
                         "description": "Draft message in JSON format",
-                        "name": "email",
+                        "name": "draft",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -1687,7 +1687,7 @@
         },
         "/api/v1/gmail/draft/{id}": {
             "get": {
-                "description": "Get an email message by its unique identifier",
+                "description": "Get an draft message by its unique identifier",
                 "produces": [
                     "application/json"
                 ],
@@ -1713,7 +1713,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Email message data",
+                        "description": "Draft message data",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1741,14 +1741,14 @@
         },
         "/api/v1/gmail/drafts": {
             "get": {
-                "description": "Get a list of all email messages",
+                "description": "Get a list of all draft messages",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "drafts-gmail"
                 ],
-                "summary": "Display the list of email messages",
+                "summary": "Display the list of draft messages",
                 "parameters": [
                     {
                         "type": "string",
@@ -1760,7 +1760,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "List of all email messages",
+                        "description": "List of all draft messages",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1901,7 +1901,7 @@
         },
         "/api/v1/gmail/email/update/{id}": {
             "put": {
-                "description": "AddDraft a update email message to the system",
+                "description": "Update a update email message to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -1911,7 +1911,7 @@
                 "tags": [
                     "emails-gmail"
                 ],
-                "summary": "SendDraft a email draft message",
+                "summary": "Update a email draft message",
                 "parameters": [
                     {
                         "type": "string",
@@ -2221,7 +2221,7 @@
         },
         "/api/v1/gmail/label/create": {
             "post": {
-                "description": "Send a new label to the system",
+                "description": "CreateLabel a new label to the system",
                 "consumes": [
                     "application/json"
                 ],
@@ -2231,7 +2231,7 @@
                 "tags": [
                     "labels-gmail"
                 ],
-                "summary": "Send a new label",
+                "summary": "CreateLabel a new label",
                 "parameters": [
                     {
                         "type": "string",
@@ -2393,14 +2393,14 @@
         },
         "/api/v1/gmail/label/update/{id}": {
             "put": {
-                "description": "Update label a user",
+                "description": "UpdateLabel label a user",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "labels-gmail"
                 ],
-                "summary": "Update label a user",
+                "summary": "UpdateLabel label a user",
                 "parameters": [
                     {
                         "type": "string",
@@ -2743,12 +2743,6 @@
                         "description": "Auth successful",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request body",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
                         }
                     },
                     "401": {
